--- a/InstagramClone_mine/HomeTableViewCell.xib
+++ b/InstagramClone_mine/HomeTableViewCell.xib
@@ -26,10 +26,10 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="McD-Yw-dgv">
-                                <rect key="frame" x="0.0" y="367" width="367" height="30"/>
+                                <rect key="frame" x="0.0" y="367" width="367" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fvI-7d-pDA">
-                                        <rect key="frame" x="5" y="0.0" width="30" height="30"/>
+                                        <rect key="frame" x="5" y="0.0" width="30" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="O8J-60-eud"/>
                                         </constraints>
@@ -39,7 +39,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mm7-VI-rWg" customClass="CustomCommentButton" customModule="InstagramClone_mine" customModuleProvider="target">
-                                        <rect key="frame" x="41" y="-20" width="30" height="50"/>
+                                        <rect key="frame" x="41" y="0.0" width="30" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="hYB-wq-dXa"/>
                                             <constraint firstAttribute="height" constant="50" id="wnd-BK-LZi"/>
@@ -50,7 +50,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LZF-xc-hDn" userLabel="Share Button">
-                                        <rect key="frame" x="77" y="-20" width="30" height="50"/>
+                                        <rect key="frame" x="77" y="0.0" width="30" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="4Lw-Y8-LHG"/>
                                             <constraint firstAttribute="width" constant="30" id="nNN-e5-TVC"/>
@@ -61,11 +61,11 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ka6-l7-acr">
-                                        <rect key="frame" x="113" y="0.0" width="213" height="30"/>
+                                        <rect key="frame" x="113" y="0.0" width="213" height="50"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5X3-5W-JW3" userLabel="Bookmark Button">
-                                        <rect key="frame" x="332" y="-20" width="30" height="50"/>
+                                        <rect key="frame" x="332" y="0.0" width="30" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="0qz-hn-FJz"/>
                                             <constraint firstAttribute="width" constant="30" id="eU9-MY-XDi"/>
@@ -77,13 +77,13 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="Bfg-SU-MU2"/>
+                                    <constraint firstAttribute="height" constant="50" id="Bfg-SU-MU2"/>
                                     <constraint firstItem="fvI-7d-pDA" firstAttribute="leading" secondItem="McD-Yw-dgv" secondAttribute="leading" constant="5" id="M2I-eT-Bfu"/>
                                     <constraint firstAttribute="trailing" secondItem="5X3-5W-JW3" secondAttribute="trailing" constant="5" id="TfJ-ev-rfW"/>
                                 </constraints>
                             </stackView>
                             <label opaque="NO" clipsSubviews="YES" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRW-OD-vhJ">
-                                <rect key="frame" x="10" y="397" width="35.5" height="161"/>
+                                <rect key="frame" x="10" y="417" width="35.5" height="141"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="vTd-FM-Lm6"/>
                                 </constraints>
@@ -94,6 +94,7 @@
                         </subviews>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="Pd3-cD-1JF" firstAttribute="top" secondItem="6eO-hS-hGg" secondAttribute="top" id="HiU-b7-Dga"/>
                             <constraint firstItem="Pd3-cD-1JF" firstAttribute="top" secondItem="6eO-hS-hGg" secondAttribute="top" id="Ia4-bi-JWk"/>
                             <constraint firstAttribute="trailing" secondItem="SRW-OD-vhJ" secondAttribute="trailing" constant="10" id="U9K-S6-mUf"/>
                             <constraint firstItem="Pd3-cD-1JF" firstAttribute="leading" secondItem="6eO-hS-hGg" secondAttribute="leading" id="sDt-rd-m8X"/>
