--- a/InstagramClone_mine/Screens/DetailScreenVC.xib
+++ b/InstagramClone_mine/Screens/DetailScreenVC.xib
@@ -46,7 +46,7 @@
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 </textView>
-                                <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="409" placeholderIntrinsicHeight="270" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uDz-6N-OQG" customClass="SelfSizedTableView" customModule="InstagramClone_mine" customModuleProvider="target">
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="409" placeholderIntrinsicHeight="270" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uDz-6N-OQG" customClass="SelfSizedTableView" customModule="InstagramClone_mine" customModuleProvider="target">
                                     <rect key="frame" x="2.5" y="514" width="409" height="270"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <connections>
@@ -56,7 +56,7 @@
                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="0SR-i0-KgE">
                                     <rect key="frame" x="8.5" y="784" width="397" height="100"/>
                                     <subviews>
-                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Type your comment" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5hH-at-cYm">
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5hH-at-cYm">
                                             <rect key="frame" x="0.0" y="0.0" width="347" height="100"/>
                                             <color key="backgroundColor" systemColor="systemGray4Color"/>
                                             <constraints>
@@ -65,6 +65,9 @@
                                             <color key="textColor" systemColor="labelColor"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            <connections>
+                                                <outlet property="delegate" destination="-1" id="6cQ-d4-dX8"/>
+                                            </connections>
                                         </textView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UEH-ZE-6am">
                                             <rect key="frame" x="347" y="35" width="50" height="30"/>
