--- a/InstagramClone_mine/Screens/DetailScreenVC.xib
+++ b/InstagramClone_mine/Screens/DetailScreenVC.xib
@@ -11,6 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailScreenVC" customModule="InstagramClone_mine" customModuleProvider="target">
             <connections>
                 <outlet property="commentsTableView" destination="uDz-6N-OQG" id="8dS-vI-OmX"/>
+                <outlet property="coommentsTableViewHeightConstraint" destination="SRk-8X-Uh6" id="bMN-vs-SGf"/>
                 <outlet property="descriptionHeight" destination="sSK-YA-4Nc" id="oR9-K4-umx"/>
                 <outlet property="imageView" destination="g5I-Dy-td4" id="bTB-sE-pFw"/>
                 <outlet property="newCommentTextView" destination="5hH-at-cYm" id="1x3-tb-QfT"/>
@@ -20,11 +21,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="1037"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qvv-xV-W70">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="1037"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ZVP-zE-yQH">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="884"/>
@@ -35,7 +36,7 @@
                                         <constraint firstAttribute="width" secondItem="g5I-Dy-td4" secondAttribute="height" multiplier="1:1" id="sy4-iH-Ppu"/>
                                     </constraints>
                                 </imageView>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" bouncesZoom="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KBn-cP-SkD">
+                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" bouncesZoom="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KBn-cP-SkD" userLabel="Description TextView">
                                     <rect key="frame" x="0.0" y="414" width="414" height="100"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
@@ -46,15 +47,18 @@
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 </textView>
-                                <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="409" placeholderIntrinsicHeight="270" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uDz-6N-OQG" customClass="SelfSizedTableView" customModule="InstagramClone_mine" customModuleProvider="target">
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="409" placeholderIntrinsicHeight="270" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uDz-6N-OQG" userLabel="Comments Table View" customClass="SelfSizedTableView" customModule="InstagramClone_mine" customModuleProvider="target">
                                     <rect key="frame" x="2.5" y="514" width="409" height="270"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="270" id="SRk-8X-Uh6"/>
+                                    </constraints>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="REP-kh-nDg"/>
                                     </connections>
                                 </tableView>
-                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="0SR-i0-KgE">
-                                    <rect key="frame" x="8.5" y="784" width="397" height="100"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="0SR-i0-KgE" userLabel="New Comment Stack">
+                                    <rect key="frame" x="15.5" y="784" width="383" height="100"/>
                                     <subviews>
                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5hH-at-cYm">
                                             <rect key="frame" x="0.0" y="0.0" width="347" height="100"/>
@@ -70,7 +74,7 @@
                                             </connections>
                                         </textView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UEH-ZE-6am">
-                                            <rect key="frame" x="347" y="35" width="50" height="30"/>
+                                            <rect key="frame" x="347" y="35" width="36" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="50" id="kr3-au-FC9"/>
                                             </constraints>
@@ -89,8 +93,10 @@
                                 </stackView>
                             </subviews>
                             <constraints>
-                                <constraint firstItem="0SR-i0-KgE" firstAttribute="top" secondItem="uDz-6N-OQG" secondAttribute="bottom" id="BCQ-o6-LlT"/>
+                                <constraint firstItem="g5I-Dy-td4" firstAttribute="width" secondItem="ZVP-zE-yQH" secondAttribute="width" id="67P-zd-Wxm"/>
+                                <constraint firstItem="0SR-i0-KgE" firstAttribute="top" secondItem="uDz-6N-OQG" secondAttribute="bottom" id="RzC-J7-BXe"/>
                                 <constraint firstItem="KBn-cP-SkD" firstAttribute="width" secondItem="ZVP-zE-yQH" secondAttribute="width" id="Wcq-sK-6Zu"/>
+                                <constraint firstItem="uDz-6N-OQG" firstAttribute="top" secondItem="KBn-cP-SkD" secondAttribute="bottom" id="y1F-wJ-cvz"/>
                             </constraints>
                         </stackView>
                     </subviews>
@@ -114,7 +120,7 @@
                 <constraint firstAttribute="bottom" secondItem="qvv-xV-W70" secondAttribute="bottom" id="N9E-bH-aKT"/>
                 <constraint firstItem="qvv-xV-W70" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="NkZ-8Q-m3T"/>
             </constraints>
-            <point key="canvasLocation" x="146.37681159420291" y="154.01785714285714"/>
+            <point key="canvasLocation" x="147.82608695652175" y="172.76785714285714"/>
         </view>
     </objects>
     <resources>
