--- a/InstagramClone_mine/Screens/AddScreenVC.xib
+++ b/InstagramClone_mine/Screens/AddScreenVC.xib
@@ -25,17 +25,17 @@
                     <rect key="frame" x="0.0" y="0.0" width="414" height="852"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C66-xx-0dx">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="700"/>
+                            <rect key="frame" x="8" y="52" width="398" height="652"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ke-2e-VxV">
-                                    <rect key="frame" x="170" y="335" width="74" height="30"/>
+                                    <rect key="frame" x="162" y="311" width="74" height="30"/>
                                     <state key="normal" title="Add Image"/>
                                     <connections>
                                         <action selector="imageTapped:" destination="-1" eventType="touchUpInside" id="Csv-s4-g2X"/>
                                     </connections>
                                 </button>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BoO-Pi-ELp">
-                                    <rect key="frame" x="0.0" y="20" width="414" height="660"/>
+                                    <rect key="frame" x="0.0" y="20" width="398" height="612"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -53,7 +53,7 @@
                             </connections>
                         </view>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Please enter text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="k75-hL-zRc">
-                            <rect key="frame" x="0.0" y="700" width="414" height="70"/>
+                            <rect key="frame" x="8" y="704" width="398" height="70"/>
                             <color key="backgroundColor" systemColor="systemGray5Color"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="70" id="iOL-Km-d4a"/>
@@ -66,7 +66,7 @@
                             </connections>
                         </textView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ree-ax-P4y">
-                            <rect key="frame" x="0.0" y="770" width="414" height="82"/>
+                            <rect key="frame" x="8" y="774" width="398" height="70"/>
                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
                             <inset key="contentEdgeInsets" minX="0.0" minY="20" maxX="0.0" maxY="20"/>
                             <state key="normal" title="Post"/>
@@ -78,6 +78,7 @@
                     <constraints>
                         <constraint firstItem="k75-hL-zRc" firstAttribute="centerX" secondItem="rKb-D0-y0Y" secondAttribute="centerX" id="k5W-WH-0K3"/>
                     </constraints>
+                    <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
