--- a/InstagramClone_mine/Screens/DetailScreenVC.xib
+++ b/InstagramClone_mine/Screens/DetailScreenVC.xib
@@ -27,8 +27,8 @@
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qvv-xV-W70">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="1037"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ZVP-zE-yQH">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="884"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ZVP-zE-yQH">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="900"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g5I-Dy-td4">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
@@ -47,7 +47,7 @@
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 </textView>
-                                <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="409" placeholderIntrinsicHeight="270" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uDz-6N-OQG" userLabel="Comments Table View" customClass="SelfSizedTableView" customModule="InstagramClone_mine" customModuleProvider="target">
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="409" placeholderIntrinsicHeight="270" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uDz-6N-OQG" userLabel="Comments Table View" customClass="SelfSizedTableView" customModule="InstagramClone_mine" customModuleProvider="target">
                                     <rect key="frame" x="2.5" y="514" width="409" height="270"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
@@ -58,11 +58,11 @@
                                     </connections>
                                 </tableView>
                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="0SR-i0-KgE" userLabel="New Comment Stack">
-                                    <rect key="frame" x="15.5" y="784" width="383" height="100"/>
+                                    <rect key="frame" x="8.5" y="784" width="397" height="116"/>
                                     <subviews>
                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5hH-at-cYm">
-                                            <rect key="frame" x="0.0" y="0.0" width="347" height="100"/>
-                                            <color key="backgroundColor" systemColor="systemGray4Color"/>
+                                            <rect key="frame" x="8" y="8" width="331" height="100"/>
+                                            <color key="backgroundColor" systemColor="systemGray5Color"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="100" id="BQi-bP-WEK"/>
                                             </constraints>
@@ -74,7 +74,7 @@
                                             </connections>
                                         </textView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UEH-ZE-6am">
-                                            <rect key="frame" x="347" y="35" width="36" height="30"/>
+                                            <rect key="frame" x="339" y="43" width="50" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="50" id="kr3-au-FC9"/>
                                             </constraints>
@@ -90,13 +90,13 @@
                                         <constraint firstAttribute="trailing" secondItem="UEH-ZE-6am" secondAttribute="trailing" id="RwJ-fq-18I"/>
                                         <constraint firstItem="5hH-at-cYm" firstAttribute="top" secondItem="0SR-i0-KgE" secondAttribute="top" id="oib-9E-Nr4"/>
                                     </constraints>
+                                    <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
                                 </stackView>
                             </subviews>
                             <constraints>
                                 <constraint firstItem="g5I-Dy-td4" firstAttribute="width" secondItem="ZVP-zE-yQH" secondAttribute="width" id="67P-zd-Wxm"/>
-                                <constraint firstItem="0SR-i0-KgE" firstAttribute="top" secondItem="uDz-6N-OQG" secondAttribute="bottom" id="RzC-J7-BXe"/>
                                 <constraint firstItem="KBn-cP-SkD" firstAttribute="width" secondItem="ZVP-zE-yQH" secondAttribute="width" id="Wcq-sK-6Zu"/>
-                                <constraint firstItem="uDz-6N-OQG" firstAttribute="top" secondItem="KBn-cP-SkD" secondAttribute="bottom" id="y1F-wJ-cvz"/>
+                                <constraint firstItem="uDz-6N-OQG" firstAttribute="top" secondItem="KBn-cP-SkD" secondAttribute="bottom" constant="40" id="y1F-wJ-cvz"/>
                             </constraints>
                         </stackView>
                     </subviews>
@@ -130,8 +130,8 @@
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="systemGray4Color">
-            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
