--- a/InstagramClone_mine/HomeTableViewCell.xib
+++ b/InstagramClone_mine/HomeTableViewCell.xib
@@ -17,7 +17,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="6eO-hS-hGg">
-                        <rect key="frame" x="0.0" y="0.0" width="367" height="558"/>
+                        <rect key="frame" x="0.0" y="0.0" width="367" height="538"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pd3-cD-1JF">
                                 <rect key="frame" x="0.0" y="0.0" width="367" height="367"/>
@@ -83,7 +83,7 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" clipsSubviews="YES" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRW-OD-vhJ">
-                                <rect key="frame" x="10" y="417" width="347" height="141"/>
+                                <rect key="frame" x="10" y="417" width="347" height="121"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="vTd-FM-Lm6"/>
                                 </constraints>
@@ -106,7 +106,7 @@
                     <constraint firstItem="6eO-hS-hGg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="a6r-HZ-Uqc"/>
                     <constraint firstAttribute="trailing" secondItem="6eO-hS-hGg" secondAttribute="trailing" id="esL-ON-KOV"/>
                     <constraint firstItem="6eO-hS-hGg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="jJV-dd-5nb"/>
-                    <constraint firstAttribute="bottom" secondItem="6eO-hS-hGg" secondAttribute="bottom" id="mAq-7j-uam"/>
+                    <constraint firstAttribute="bottom" secondItem="6eO-hS-hGg" secondAttribute="bottom" constant="20" id="mAq-7j-uam"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
