--- a/InstagramClone_mine/Screens/DetailScreenVC.xib
+++ b/InstagramClone_mine/Screens/DetailScreenVC.xib
@@ -73,6 +73,7 @@
                                     <constraints>
                                         <constraint firstAttribute="height" constant="270" id="SRk-8X-Uh6"/>
                                     </constraints>
+                                    <inset key="scrollIndicatorInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="14"/>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="REP-kh-nDg"/>
                                     </connections>
